# minddiff

./: .env.example  .gitignore  Dockerfile  LICENSE  PRD.md  README.md  fly.toml  pyproject.toml
scripts/: seed.py
src/minddiff/: __init__.py  app.py  auth.py  config.py  db.py  dependencies.py  models.py  schemas.py
src/minddiff/routes/: cycles.py  pages.py  reports.py  responses.py  teams.py
src/minddiff/services/: divergence.py  llm.py  synthesis.py
src/minddiff/templates/: base.html  dashboard.html  input.html  login.html  report.html
src/minddiff/templates/partials/: status_panel.html
tests/: conftest.py  test_divergence.py  test_e2e_validation.py  test_models.py  test_responses.py  test_synthesis.py
tests/fixtures/: ground_truth_rubric.json  sample_responses.json
